...

            <EditText
                android:id="@+id/editLengthA1"
                style="@style/TextEditorBorderW2"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:nextFocusDown="@+id/editLengthB1"
                android:selectAllOnFocus="true"
                android:text="@string/zero">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editLengthB1"
                style="@style/TextEditorBorderW2"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:nextFocusDown="@+id/editLengthC1"
                android:selectAllOnFocus="true"
                android:text="@string/zero" />

            <EditText
                android:id="@+id/editLengthC1"
                style="@style/TextEditorBorderW2"
...
